Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
5.12
-
None
Description
With the current 5.12 branch (69-based), I get this warning:
[20381:20397:0923/222745.819085:INFO:GrGLInterface.cpp(453)] ../../3rdparty/chromium/third_party/skia/src/gpu/gl/GrGLInterface.cpp:453 GrGLInterface::validate() failed.
With simplebrowser I still seem to get a website, but with this minimal example I don't see anything at all:
#include <QApplication> #include <QWebEngineView> #include <QUrl> int main(int argc, char *argv[]) { QApplication app(argc, argv); QWebEngineView view; view.load(QUrl(argv[1])); view.show(); return app.exec(); }
QT += core widgets webenginewidgets TARGET = testbrowser TEMPLATE = app