Fix failure in GrGLInterface::validate()

The validation was more accurate than the generated GL bindings, so
improve the bindings so functions are bound when expected.

Task-Number: QTBUG-70695
Change-Id: Ic537bf79bdc055ad327d391a435e49d56a637725
Reviewed-by: Michael Brüning <michael.bruning@qt.io>